Changes: Explorer, Fetching node data after swarm connect, Dashboard, API handling Responses